--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A quick script to delete all emails categorized as Promotions, Social, & Forums.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist/* && tsc && cp appsscript.json dist/ && prettier dist --write && clasp push"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/jpelton-stroud/gas-gmail-cleanup/issues"
   },
-  "homepage": "https://github.com/jpelton-stroud/gas-gmail-cleanup#readme"
+  "homepage": "https://github.com/jpelton-stroud/gas-gmail-cleanup#readme",
+  "devDependencies": {
+    "@google/clasp": "^3.1.3",
+    "@types/google-apps-script": "^2.0.7",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
+  }
 }
